# zeek-mcp-server

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  pyproject.toml  ruff.toml  server.py  zeek_parser.py
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: bgp-hijack-detect.zeek  dns-exfiltration.zeek  ospf-anomaly.zeek
tests/: conftest.py  test_parser.py  test_server_tools.py  test_validation.py
