[project]
name = "zeek-mcp-server"
version = "0.1.0"
description = "MCP server for Zeek network security monitoring - PCAP analysis, log parsing, and anomaly detection"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0"]

[project.scripts]
zeek-mcp = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
